# pumpfun-agent-strategy-cli

./: .env.example  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: api.rs  clone.rs  lib.rs  strategy.rs
crates/app/src/usecases/: address.rs  clone.rs  experiments.rs  inspect.rs  mod.rs  replay.rs  tasks.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  config.rs  main.rs  output.rs
crates/cli/src/commands/: helpers.rs  mod.rs  replay.rs  scaffold.rs  serve.rs
crates/cli/src/commands/inspect/: address.rs  brief.rs  clone.rs  export.rs  mint.rs  mod.rs  report.rs  runs.rs  stats.rs
crates/cli/src/commands/stream/: config.rs  ingest.rs  live_paper.rs  mod.rs
crates/cli/src/dashboard/: handlers.rs  mod.rs  render.rs  state.rs
crates/cli/src/runtime/: clone.rs  mod.rs  persist.rs  strategy.rs  sweep.rs
crates/core/: Cargo.toml
crates/core/src/: broker.rs  decoder.rs  engine.rs  grpc.rs  lib.rs  model.rs  postgres.rs  replay.rs  state.rs  storage.rs
crates/core/src/strategy/: breakout.rs  early_flow.rs  liquidity_follow.rs  mod.rs  momentum.rs  noop.rs
crates/server/: Cargo.toml
crates/server/src/: http.rs  main.rs
schema/: postgres.sql
skills/agent-bootstrap/: SKILL.md
skills/pump-ingest-ops/: SKILL.md
skills/strategy-iteration/: SKILL.md
skills/strategy-scaffolding/: SKILL.md
skills/wallet-clone-analysis/: SKILL.md
strategies/: README.md
strategies/examples/: early-flow.toml  momentum.toml
