[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.6"
base64 = "0.22.1"
borsh = { version = "1.6.1", features = ["derive"] }
bs58 = "0.5.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.18"
toml = "0.9.8"
tonic = { version = "0.14.5", features = ["tls-native-roots"] }
tracing = "0.1.44"
yellowstone-grpc-client = "12.2.0"
yellowstone-grpc-proto = { version = "12.1.0", features = ["tonic"] }
