[package]
name = "pump-agent-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
borsh.workspace = true
bs58.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
yellowstone-grpc-client.workspace = true
yellowstone-grpc-proto.workspace = true
