[package]
name = "pump-agent-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
dotenvy = "0.15.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
pump-agent-app = { path = "../app" }
pump-agent-core = { path = "../core" }
